resources/client/components/style.css
/* ... */
/**
* Home Page
*/
.homepage-header {
  -fx-background-color: #e8ddb5;
  -fx-font-family: Avantgarde;
  -fx-text-fill: #ffffff;
  -fx-font-size: 24px;
  -fx-padding: 10px 20px;
  -fx-alignment: center-left;
  -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 1);
  -fx-font-weight: bold;
  -fx-border-color: #d2b48c;
  -fx-border-width: 0 0 2 0;
  -fx-border-radius: 0;
  background-color: #e8ddb5;
  color: #ffffff;
  font-size: 24px;
  font-family: Avantgarde;
  padding: 10px 20px;
  font-weight: bold;
  border-color: #d2b48c;
  border-width: 0 0 2 0;
  border-radius: 0;
}

.homepage-header .app-name {
  -fx-font: Lucida Calligraphy;
  -fx-text-fill: #654321;
  -fx-font-size: 30px;
  font-family: Lucida Calligraphy;
  color: #654321;
  font-size: 30px;
  font: Lucida Calligraphy;
}

.homepage-header .create-button {
  -fx-font-size: 16px;
  -fx-background-color: #97cfa3;
  -fx-text-fill: #ffffff;
  -fx-padding: 8px 12px;
  -fx-border-radius: 5px;
  -fx-cursor: hand;
  -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 5, 0, 0, 1);
  -fx-transition: background-color 0.3s;
  background-color: #97cfa3;
  color: #ffffff;
  padding: 8px 12px;
  border-radius: 5px;
  cursor: hand;
  transition: background-color 0.3s;
  font-size: 16px;
}

.homepage-header .create-button:hover {
  -fx-background-color: #6d9e78d5;
  background-color: #6d9e78d5;
}

.homepage-header .logout-button {
  -fx-font-size: 16px;
  -fx-background-color: #ff7276;
  -fx-text-fill: #ffffff;
  -fx-padding: 8px 12px;
  -fx-border-radius: 5px;
  -fx-cursor: hand;
  -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 5, 0, 0, 1);
  -fx-transition: background-color 0.3s;
  background-color: #97cfa3;
  color: #ffffff;
  padding: 8px 12px;
  border-radius: 5px;
  cursor: hand;
  transition: background-color 0.3s;
  font-size: 16px;
}

.homepage-header .logout-button:hover {
  -fx-background-color: #cd001a;
  background-color: #6d9e78d5;
}


.meal-type-label {
  -fx-padding: 5px 10px;
  -fx-background-radius: 20;

  padding: 5px 10px;
  border-radius: 20;
}

.bubble-label {
  -fx-background-insets: 0;
  -fx-border-radius: 20;
  -fx-border-color: black;
  -fx-border-width: 1.25;
  -fx-text-fill: #654321;

  border-radius: 20px;
  border-color: black;
  border-width: 1px;
}


.meal-type-label[mealType="Breakfast"] {
  -fx-background-color: #FAEDCB;
  background-color: #FAEDCB;
}

.meal-type-label[mealType="Lunch"] {
  -fx-background-color: #C9E4DE;
  background-color: #C9E4DE;
}

.meal-type-label[mealType="Dinner"] {
  -fx-background-color: #DBCDF0;
  background-color: #DBCDF0;
}

.meal-type-label[mealType="Unknown"] {
  -fx-background-color: #808080;
  background-color: #808080;
}

.recipe-box {
  -fx-border-color: #b9bccc;
  -fx-border-width: 2px;
  -fx-border-radius: 5px;
  -fx-background-color: #eaeef1;
  -fx-padding: 10px;
  -fx-cursor: hand;
  -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 10, 0, 0, 1);
  -fx-transition: -fx-background-color 0.3s;
  border-color: #b9bccc;
  border-width: 2px;
  border-radius: 5px;
  background-color: #eaeef1;
  padding: 10px;
  cursor: hand;
  transition: background-color 0.3s;
}

.recipe-box:hover {
  -fx-border-color: #b9bccc;
  -fx-border-width: 2px;
  -fx-border-radius: 5px;
  -fx-background-color: #dfe1ef;
  border-color: #b9bccc;
  border-width: 2px;
  border-radius: 5px;
  background-color: #dfe1ef;
}

.recipe-box .recipe-title {
  -fx-font: Lucida Calligraphy;
  -fx-border-radius: 5px;
  -fx-text-fill: #654321;
  -fx-font-size: 20px;
  font-family: Lucida Calligraphy;
  border-radius: 5px;
  color: #654321;
  font-size: 20px;
  font: Lucida Calligraphy;
}
.recipe-box:hover .recipe-title {
  -fx-text-fill: #82859b;
  color: #82859b;
}

.recipe-list {
  -fx-background-color: #f0f8ff;
  -fx-padding: 10px;
  background-color: #f0f8ff;
  padding: 10px;
}

.filter-combo-box {
  -fx-background-color: #f4f4f4;
  -fx-border-color: #ccc;
  -fx-border-radius: 5;
  -fx-padding: 5;
}

.filter-combo-box .arrow-button {
  -fx-background-color: #e0e0e0;
  -fx-shape: "M 0 0 L 3 6 L 6 0 Z"; 
  -fx-scale-x: 0.7; 
  -fx-scale-y: 0.7; 
}

.filter-combo-box .arrow-button:hover {
  -fx-background-color: #d0d0d0;
}

.filter-combo-box .list-cell {
  -fx-background-color: #f4f4f4;
}

.filter-combo-box .list-view {
  -fx-background-color: #f4f4f4;
  -fx-border-color: #ccc;
}

.filter-combo-box .list-view .list-cell:selected {
  -fx-background-color: #007bff;
  -fx-text-fill: white;
}

.options-bar {
  -fx-spacing: 10;
  -fx-padding: 10;
}

.options-bar .filter-combo-box-label {
  -fx-font-size: 14;
  -fx-font-weight: bold;
  -fx-text-fill: #333;
}

.filter-combo-box .arrow {
  -fx-opacity: 0;
}

.filter-combo-box .arrow-button:hover, .filter-combo-box .list-view:hover {
  -fx-cursor: hand;
}

.filter-combo-box .list-view .list-cell:hover {
  -fx-text-fill: #786783;
}

/**
* Recording Page
*/
.recording-page {
  -fx-padding: 10px;
  -fx-spacing: 100px;
  -fx-alignment: center;
  padding: 10px;
  align-items: center;
}

.recording-page .recording-title {
  -fx-font-size: 24px;
  -fx-font-weight: bold;
  -fx-text-alignment: center;
  -fx-alignment: center;
  -fx-min-height: 80px;
  font-size: 24px;
  font-weight: bold;
  text-align: center;
  align-items: center;
  min-height: 80px;
}

.recording-page .recording-button {
  -fx-font-size: 16px;
  -fx-pref-width: 175px;
  -fx-pref-height: 50px;
  font-size: 16px;
  min-width: 175px;
  min-height: 50px;
}

.recording-page .mic-image {
  -fx-alignment: center;
  align-items: center;
}
/* ... */

